@@ -1,11 +1,13 @@
-ARG APP_INSIGHTS_AGENT_VERSION=2.5.1
+ARG APP_INSIGHTS_AGENT_VERSION=3.4.14
 
 # Application image
 
-FROM hmctspublic.azurecr.io/base/java:11-distroless
+FROM hmctspublic.azurecr.io/base/java:17-distroless
 
-COPY lib/AI-Agent.xml /opt/app/
 COPY build/libs/cpo-update-service.jar /opt/app/
 
 EXPOSE 4550
-CMD [ "cpo-update-service.jar" ]
+CMD [ \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "cpo-update-service.jar" \
+    ]
